--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@types/react": "~18.0.27",
     "axios": "^1.3.4",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~48.0.5",
     "expo-cli": "^6.3.2",
     "expo-status-bar": "~1.4.4",
@@ -24,6 +25,8 @@
     "react-native": "0.71.4",
     "react-native-calendars": "^1.1294.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-progress": "^5.0.0",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-switch-selector": "^2.3.0",
