--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~48.0.5",
     "expo-cli": "^6.3.2",
+    "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
