--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
@@ -18,6 +20,7 @@
     "axios": "^1.3.4",
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~48.0.5",
+    "expo-blur": "^12.2.2",
     "expo-cli": "^6.3.2",
     "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -25,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
     "react-native-calendars": "^1.1294.0",
+    "react-native-color-matrix-image-filters": "^6.0.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-progress": "^5.0.0",
     "react-native-progress-circle": "^2.1.0",
