--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-color-matrix-image-filters": "^6.0.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-progress": "^5.0.0",
     "react-native-progress-circle": "^2.1.0",
     "react-native-safe-area-context": "4.5.0",
