--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-native-progress-circle": "^2.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-swipeable": "^0.6.0",
     "react-native-switch-selector": "^2.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
