--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "lodash": "^4.17.21",
+    "package.json": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
