--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+#test files
+__tests__/
+__mock__/
+*.test.js
+.babelrc
+setupTests.js
+```
