--- a/package.json
+++ b/package.json
@@ -1,58 +1,57 @@
 {
-    "name": "awesomeprojectexpo",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web"
-    },
-    "dependencies": {
-        "@expo/vector-icons": "^13.0.0",
-        "@expo/webpack-config": "^18.0.1",
-        "@fortawesome/free-solid-svg-icons": "^6.4.0",
-        "@fortawesome/react-native-fontawesome": "^0.3.0",
-        "@react-native-async-storage/async-storage": "^1.17.11",
-        "@react-native-community/datetimepicker": "^6.7.3",
-        "@react-native-picker/picker": "^2.4.10",
-        "@react-navigation/bottom-tabs": "^6.5.7",
-        "@react-navigation/native": "^6.1.6",
-        "@react-navigation/stack": "^6.3.16",
-        "@types/react": "~18.0.27",
-        "axios": "^1.3.4",
-        "deprecated-react-native-prop-types": "^4.0.0",
-        "expo": "~48.0.5",
-        "expo-blur": "^12.2.2",
-        "expo-cli": "^6.3.2",
-        "expo-font": "^11.1.1",
-        "expo-image-picker": "^14.1.1",
-        "expo-splash-screen": "^0.18.1",
-        "expo-status-bar": "~1.4.4",
-        "lodash": "^4.17.21",
-        "package.json": "^2.0.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-native": "0.71.4",
-        "react-native-calendars": "^1.1294.0",
-        "react-native-color-matrix-image-filters": "^6.0.3",
-        "react-native-elements": "^3.4.3",
-        "react-native-gesture-handler": "^2.9.0",
-        "react-native-keyboard-aware-scroll-view": "^0.9.5",
-        "react-native-linear-gradient": "^2.6.2",
-        "react-native-progress": "^5.0.0",
-        "react-native-progress-circle": "^2.1.0",
-        "react-native-safe-area-context": "4.5.0",
-        "react-native-screens": "~3.20.0",
-        "react-native-swipe-list-view": "^3.2.9",
-        "react-native-swipeable": "^0.6.0",
-        "react-native-switch-selector": "^2.3.0",
-        "react-native-vector-icons": "^9.2.0",
-        "react-native-web": "~0.18.10",
-        "typescript": "^4.9.4"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0"
-    },
-    "private": true
+  "name": "awesomeprojectexpo",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.3",
+    "@react-native-picker/picker": "2.4.8",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "@types/react": "~18.0.27",
+    "axios": "^1.3.4",
+    "deprecated-react-native-prop-types": "^4.0.0",
+    "expo": "~48.0.5",
+    "expo-blur": "^12.2.2",
+    "expo-cli": "^6.3.2",
+    "expo-font": "^11.1.1",
+    "expo-image-picker": "^14.1.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "lodash": "^4.17.21",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.7",
+    "react-native-calendars": "^1.1294.0",
+    "react-native-color-matrix-image-filters": "^6.0.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-progress": "^5.0.0",
+    "react-native-progress-circle": "^2.1.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-swipeable": "^0.6.0",
+    "react-native-switch-selector": "^2.3.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.10",
+    "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
