--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
